containers resize set up

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__logo logo">
-                <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
-            </div>
-            <div class="header__search-form search-form">
-                <div class="search-form__input-container">
+            <div class="header__wrapper">
+                <div class="header__logo logo">
+                    <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
+                </div>
+                <div class="header__search-form search-form">
                     <input class="search-form__input" type="text" placeholder="Найти..." />
                 </div>
-            </div>
-            <div class="header__profile profile">
-                <div class="profile__icon">
-                    <img src="./Assets/user-menu-icon.svg" alt="User icon" />
-                </div>
-                <div class="profile__extended">
-                    <div class="profile__name">Константин</div>
-                    <div class="profile__avatar">
-                        <img class="avatar" src="./Assets/avavtar.png" alt="Profile avatar" />
+                <div class="header__profile profile">
+                    <div class="profile__icon">
+                        <img src="./Assets/user-menu-icon.svg" alt="User icon" />
+                    </div>
+                    <div class="profile__extended">
+                        <div class="profile__name">Константин</div>
+                        <div class="profile__avatar">
+                            <img class="avatar" src="./Assets/avavtar.png" alt="Profile avatar" />
+                        </div>
                     </div>
                 </div>
             </div>
