links added to all interactive elements

--- a/index.html
+++ b/index.html
@@ -16,22 +16,30 @@
     <body>
         <header class="header">
             <div class="header__wrapper">
-                <div class="header__logo logo">
-                    <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
+                <div class="header__logo">
+                    <a href="#">
+                        <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
+                    </a>
                 </div>
                 <div class="header__search-form search-form">
                     <input class="search-form__input" type="text" placeholder="Найти..." />
                 </div>
                 <div class="header__profile profile">
-                    <div class="profile__icon">
-                        <img src="./Assets/user-menu-icon.svg" alt="User icon" />
-                    </div>
-                    <div class="profile__extended">
-                        <div class="profile__name">Константин</div>
-                        <div class="profile__avatar">
-                            <img class="avatar" src="./Assets/avavtar.png" alt="Profile avatar" />
+                    <a href="#" class="card__link-filler">
+                        <div class="profile__icon">
+                            <img src="./Assets/user-menu-icon.svg" alt="User icon" />
                         </div>
-                    </div>
+                        <div class="profile__extended">
+                            <div class="profile__name">Константин</div>
+                            <div class="profile__avatar">
+                                <img
+                                    class="avatar"
+                                    src="./Assets/avavtar.png"
+                                    alt="Profile avatar"
+                                />
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </header>
@@ -40,29 +48,67 @@
                 <h1 class="partners__title title">Наши партнеры</h1>
                 <ul class="partners__cards-container cards-container">
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/mxm.svg" alt="mxm logo" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/mxm.svg"
+                                alt="mxm logo"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/upp.svg" alt="upp logo" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/upp.svg"
+                                alt="upp logo"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img
-                            class="card_logo logo"
-                            src="./Assets/tokens/spdr.svg"
-                            alt="spdr logo"
-                        />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/spdr.svg"
+                                alt="spdr logo"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/ftt.svg" alt="ftt logo" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/ftt.svg"
+                                alt="ftt logo"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/zeb.svg" alt="mxm zeb" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/zeb.svg"
+                                alt="mxm zeb"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/ode.svg" alt="ode logo" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/ode.svg"
+                                alt="ode logo"
+                            />
+                        </a>
                     </li>
                     <li class="card">
-                        <img class="card_logo logo" src="./Assets/tokens/mwc.svg" alt="mwc logo" />
+                        <a href="#" class="card__link-filler">
+                            <img
+                                class="card_logo logo"
+                                src="./Assets/tokens/mwc.svg"
+                                alt="mwc logo"
+                            />
+                        </a>
                     </li>
                 </ul>
             </section>
