page is working

--- a/index.html
+++ b/index.html
@@ -15,31 +15,37 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <a href="#">
-                        <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
-                    </a>
+            <div class="header__wrapper wrapper">
+                <div class="header__flex-el">
+                    <div class="header__logo">
+                        <a href="#">
+                            <img class="logo__img" src="./Assets/main-logo.svg" alt="Main logo" />
+                        </a>
+                    </div>
                 </div>
-                <div class="header__search-form search-form">
-                    <input class="search-form__input" type="text" placeholder="Найти..." />
+                <div class="header__flex-el">
+                    <div class="header__search-form search-form">
+                        <input class="search-form__input" type="text" placeholder="Найти..." />
+                    </div>
                 </div>
-                <div class="header__profile profile">
-                    <a href="#" class="card__link-filler">
-                        <div class="profile__icon">
-                            <img src="./Assets/user-menu-icon.svg" alt="User icon" />
-                        </div>
-                        <div class="profile__extended">
-                            <div class="profile__name">Константин</div>
-                            <div class="profile__avatar">
-                                <img
-                                    class="avatar"
-                                    src="./Assets/avavtar.png"
-                                    alt="Profile avatar"
-                                />
+                <div class="header__flex-el">
+                    <div class="header__profile profile">
+                        <a href="#" class="profile__link">
+                            <div class="profile__icon">
+                                <img src="./Assets/user-menu-icon.svg" alt="User icon" />
                             </div>
-                        </div>
-                    </a>
+                            <div class="profile__extended">
+                                <div class="profile__name">Константин</div>
+                                <div class="profile__avatar">
+                                    <img
+                                        class="avatar"
+                                        src="./Assets/avavtar.png"
+                                        alt="Profile avatar"
+                                    />
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -47,7 +53,7 @@
             <section class="partners">
                 <h1 class="partners__title title">Наши партнеры</h1>
                 <ul class="partners__cards-container cards-container">
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -56,7 +62,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -65,7 +71,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -74,7 +80,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -83,7 +89,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -92,7 +98,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
@@ -101,7 +107,7 @@
                             />
                         </a>
                     </li>
-                    <li class="card">
+                    <li class="partners__card card">
                         <a href="#" class="card__link-filler">
                             <img
                                 class="card_logo logo"
