checked functioning on different browsers

--- a/index.html
+++ b/index.html
@@ -55,65 +55,37 @@
                 <ul class="partners__cards-container cards-container">
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/mxm.svg"
-                                alt="mxm logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/mxm.svg" alt="mxm logo" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/upp.svg"
-                                alt="upp logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/upp.svg" alt="upp logo" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/spdr.svg"
-                                alt="spdr logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/spdr.svg" alt="spdr logo" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/ftt.svg"
-                                alt="ftt logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/ftt.svg" alt="ftt logo" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/zeb.svg"
-                                alt="mxm zeb"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/zeb.svg" alt="mxm zeb" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/ode.svg"
-                                alt="ode logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/ode.svg" alt="ode logo" />
                         </a>
                     </li>
                     <li class="partners__card card">
                         <a href="#" class="card__link-filler">
-                            <img
-                                class="card_logo logo"
-                                src="./Assets/tokens/mwc.svg"
-                                alt="mwc logo"
-                            />
+                            <img class="card_logo" src="./Assets/tokens/mwc.svg" alt="mwc logo" />
                         </a>
                     </li>
                 </ul>
