search form removing no longer affects header outline

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="header__flex-el">
+                <div class="header__flex-el header__flex-el--grow">
                     <div class="header__search-form search-form">
                         <input class="search-form__input" type="text" placeholder="Найти..." />
                     </div>
