--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 </div>
                 <div class="header__flex-el header__flex-el--grow">
                     <div class="header__search-form search-form">
-                        <input class="search-form__input" type="text" placeholder="Найти..." />
+                        <input
+                            class="search-form__input"
+                            type="text"
+                            placeholder="Найти..."
+                            autofocus
+                        />
                     </div>
                 </div>
                 <div class="header__flex-el">
